@@ -14,6 +14,7 @@ mlUnit development snapshot
     target should fail when tests failed or not.
 
   - Fix: matlabcommand.xml's logfile option is not actually optional
+  - Fix: assert_equals judges Inf and Inf as not equal
 
 
 mlUnit 1.6.9 (2015-06-17)
